EZ-868: Button bottom spacing issue resolved

--- a/pattern-lab/source/_patterns/_patterns-global/scss/admin/moderation_dashboard.scss
+++ b/pattern-lab/source/_patterns/_patterns-global/scss/admin/moderation_dashboard.scss
@@ -147,7 +147,7 @@ section[class*="block-views-blockcontent-moderation-view-blocks-"] {
       .btn {
         background: #219fad !important;
         border-radius: 5px;
-        margin: 0 5px 0 0 !important;
+        margin: 0 5px 5px 0 !important;
         padding: 10px 15px;
 
         a {
